--- a/views/book_detail.pug
+++ b/views/book_detail.pug
@@ -4,7 +4,7 @@ block content
   h1 Title: #{book.title}
 
   p #[strong Author:]
-    a(href=book.author.url) #{book.author.name}
+    a(href=book.author.url) #{' ' + book.author.name}
   p #[strong Summary:] #{book.summary}
   p #[strong ISBN:] #{book.isbn}
   p #[strong Genre:]&nbsp;
@@ -30,3 +30,8 @@ block content
         a(href=val.url) #{val._id}
     else
       p There are no copies of this book in the library.
+  hr
+  p
+    a(href=book.url+'/delete') Delete Book
+  p
+    a(href=book.url+'/update') Update Book
